Fix build issues in drools-applications due to changes in policy/models repo
Issue-ID: POLICY-1791
Signed-off-by: Rashmi Pujar <rashmi.pujar@bell.ca>
Change-Id: Ife7cbb07c3bb674257bb1979d80f4f8a7ddfc3a5